--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ is_index: true
 					<div class="item active">
 						<div class="carousel-caption">
 							<h3 >Web</h3>
-							<p>Desenvolvimento de produtos web em Ruby, Phyton, PHP, MSFT e Java. Design de produto orientado na experiência do usuário. Especialistas e-commerce em Magento, Hybris, ElasticPath e Spree.</p>
+							<p>Desenvolvimento de produtos web em Ruby, Python, PHP, MSFT e Java. Design de produto orientado na experiência do usuário. Especialistas e-commerce em Magento, Hybris, ElasticPath e Spree.</p>
 						</div>
 						<img src="img/img-web.jpg" alt="Case Globo">
 					</div>
