--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -22,7 +22,7 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Web</h2>
 				<img src="img/web.png" alt="Web" class="img-responsive img-service">
-				<p class="text-service">Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. Trabalhamos com as mais diversas tecnologias: Ruby, Phyton, PHP, MSFT e Java. Acreditamos no design de produto orientado pela experiência do usuário (UX). Somos especializados em e-commerce desde 2001 e temos bom conhecimento em Magento, Hybris, ElasticPath e Spree.</p>	
+				<p class="text-service">Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. Trabalhamos com as mais diversas tecnologias: Ruby, Python, PHP, MSFT e Java. Acreditamos no design de produto orientado pela experiência do usuário (UX). Somos especializados em e-commerce desde 2001 e temos bom conhecimento em Magento, Hybris, ElasticPath e Spree.</p>	
 				<div id="services" class="row">
 					<div class="box-service col-md-4">
 						<img src="img/services-icon-1.png">
