tentativa de usar jQuery mobile :) 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ is_index: true
 							<h3 >Web</h3>
 							<p>Desenvolvimento de produtos web em Ruby, Python, PHP, MSFT e Java. Design de produto orientado na experiência do usuário. Especialistas e-commerce em Magento, Hybris, ElasticPath e Spree.</p>
 						</div>
-						<img src="img/img-web.jpg" alt="Case Globo">
+						<img class="JS-swipe" src="img/img-web.jpg" alt="Case Globo">
 					</div>
 
 					<div class="item">
@@ -45,7 +45,7 @@ is_index: true
 							<h3>Mobile</h3>
 							<p>Experiência em mobile commerce, autosserviço móvel, vídeos e estratégia multicanal. Mais 25 aplicativos desenvolvidos em 10 países.</p>
 						</div>
-						<img src="img/mobile.png" alt="Mobile">
+						<img class="JS-swipe" src="img/mobile.png" alt="Mobile">
 					</div>
 
 					<div class="item">
@@ -54,7 +54,7 @@ is_index: true
 							<p>Colocamos mais de 50 clientes na nuvem desde 2009, usando as mais diversas tecnologias: SAP, 
 							Oracle Fusion Middleware, Oracle Portal,  Weblogic Server, Magento,  entre outras.</p>
 						</div>
-						<img src="img/img-cloud.jpg" alt="Cloud">
+						<img class="JS-swipe" src="img/img-cloud.jpg" alt="Cloud">
 					</div>
 
 					<div class="item">
@@ -62,7 +62,7 @@ is_index: true
 							<h3>Middleware</h3>
 							<p>Conhecimento em APIs e projetos de integração. Mais de 6 anos e 30 clientes com as melhores soluções do mercado.</p>
 						</div>
-						<img src="img/middleware.png" alt="Middleware">
+						<img class="JS-swipe" src="img/middleware.png" alt="Middleware">
 					</div>
 				</div>
 				<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
