--- a/carreira.html
+++ b/carreira.html
@@ -12,8 +12,9 @@ title: Carreira
 	<section id="jobs" class="box">
 		<div class="container">
 			<header><h1 class="title"> Carreira</h1></header>
+			<p class="text-carreira">Nossas equipes são ágeis, autogerenciadas e auto-organizadas, ou seja, os próprios membros elegem quem será o responsável por determinada tarefa e cobram a realização dela. Também adoramos compartilhar conhecimento e colocamos todas as nossas ideias no nosso Blog. Procuramos relações duradouras e investimos em boas ideias.</p>
 			<div class="row">
-				<h2 class="secondary-title">São Paulo<h2>
+				<h2 class="secondary-title"><span class="purple">//</span> São Paulo<h2>
 				<div class="col-md-4">
 					<div class="jumbotron">
 				        <h2>Desenvolvendor Android Jr.</h2>
@@ -142,19 +143,19 @@ title: Carreira
 			    </div>
 			</div>
 			<div class="row">
-				<h2 class="secondary-title">Rio de Janeiro<h2>
+				<h2 class="secondary-title"><span class="purple">//</span> Rio de Janeiro<h2>
 				<div class="col-md-4">
 					<h4>Sem vagas no momento!</h4>
 			    </div>
 			</div>
 			<div class="row">
-				<h2 class="secondary-title">Cloud<h2>
+				<h2 class="secondary-title"><span class="purple">//</span> CloudRetail<h2>
 				<div class="col-md-4">
 			        <h4>Sem vagas no momento!</h4>
 			    </div>
 			</div>
 			<div class="row">
-				<h2 class="secondary-title">Fix<h2>
+				<h2 class="secondary-title"><span class="purple">//</span> Fix<h2>
 				<div class="col-md-4">
 					<h4>Sem vagas no momento!</h4>
 			    </div>
