--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -22,23 +22,28 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Web</h2>
 				<img src="img/web.png" alt="Web" class="img-responsive img-service">
-				<p class="text-service">Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. Trabalhamos com as mais diversas tecnologias: Ruby, Phyton, PHP, MSFT e Java. Acreditamos no design de produto orientado pela experiência do usuário (UX). Somos especializados em e-commerce desde 2001 e temos bom conhecimento em Magento, Hybris, ElasticPath e Spree.</p>	
 				<div id="services" class="row">
-					<div class="box-service col-md-4">
-						<img src="img/services-icon-1.png">
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/times.png"></div>
+						<h3 class="">Time Multidisciplinares</h3>
+						<p>Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. </p>
+					</div>
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/services-icon-1.png"></div>
 						<h3 class="">Produtos web</h3>
-						<p>Desenvolvimento de produtos web<br>em Ruby, Python, PHP, MSFT e Java</p>
+						<p>Trabalhamos com as mais diversas tecnologias: Ruby, Phyton, PHP, MSFT e Java.</p>
 					</div>
-					<div class="box-service col-md-4">
-						<img src="img/services-icon-2.png">
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/services-icon-2.png"></div>
 						<h3 class="">User Experience</h3>
-						<p>Design de produto orientado na<br>experiência do usuário</p>
+						<p>Acreditamos no design de produto orientado pela experiência do usuário (UX).</p>
 					</div>
-					<div class="box-service col-md-4 border-right">
-						<img src="img/services-icon-3.png">
+					<div class="box-service col-md-3 no-border">
+						<div class="row center"><img src="img/services-icon-3.png"></div>
 						<h3 class="">Comércio eletrônico</h3>
-						<p>Especialistas e-commerce em Magento,<br>Hybris, ElasticPath e Spree</p>
+						<p>Somos especializados em e-commerce desde 2001 e temos bom conhecimento em Magento, IBM Websphere Smarter Commerce, ElasticPath e Spree.</p>
 					</div>
+
 				</div>	
 			</div>
 		</section>
@@ -46,49 +51,26 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Mobile</h2>
 				<img src="img/mobile.png" alt="Mobile" class="img-responsive img-service">
-				<p class="text-service">Nossa estratégia é multicanal: trabalhamos com aplicações nativas em iOS e Android, web mobile e híbridas, envolvendo mobile commerce, autosserviço móvel e conteúdo. Desenvolvemos soluções para alcançar o maior público possível sem perder funcionalidades e utilizamos a tecnologia mais adequada para cada tipo de problema. Combinamos código nativo com HTML 5, jQuery Mobile e MobileAware. Em 7 anos, implementamos as mais diversas soluções mobile em 9 países.</p>
 				<div id="services" class="row">
 					<div class="box-service border-right col-md-3">
-						<h1>1.</h1>
-						<h3>iOS</h3>
-						<p>Aplicações nativas com todas as funcionalidades que a plataforma disponibiliza.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>iphone</li>
-							<li><span class="glyphicon glyphicon-play"></span>ipad</li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-						</ul>
+						<div class="row center"><img src="img/multicanal.png"></div>
+						<h3>Muticanal</h3>
+						<p>Nossa estratégia é multicanal: trabalhamos com aplicações nativas em iOS e Android, web mobile e híbridas, envolvendo mobile commerce, autosserviço móvel e conteúdo.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<h1>2.</h1>
-						<h3>Android</h3>
-						<p>Aplicações nativas Android para Mobile commerce, auto serviço móvel e contéudo.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Diversos modelo de celulares</li>
-							<li><span class="glyphicon glyphicon-play"></span>Tablets (Xoom, Galaxy Tab, entre outros)</li>	
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-						</ul>
+						<div class="row center"><img src="img/personalizacao.png"></div>
+						<h3>Customização</h3>
+						<p>Desenvolvemos soluções para alcançar o maior público possível sem perder funcionalidades e utilizamos a tecnologia mais adequada para cada tipo de problema.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<h1>3.</h1>
-						<h3>Web Mobile</h3>
-						<p>Soluções feitas para alcançar o maior público possível sem perder riqueza de funcionalidade.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>HTML 5</li>
-							<li><span class="glyphicon glyphicon-play"></span>jQuery Mobile</li>
-							<li><span class="glyphicon glyphicon-play"></span>MobileAware</li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-						</ul>
+						<div class="row center"><img src="img/tecnologias.png"></div>
+						<h3>Tecnologias</h3>
+						<p>Combinamos código nativo com HTML 5 e jQuery Mobile.</p>
 					</div>
-					<div class="box-service col-md-3 border-right">
-						<h1>4.</h1>
-						<h3>Híbridas</h3>
-						<p>Utilização de tecnologia adequada em cada problema. Combinamos código nativo com HTML 5.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Reutilização</li>
-							<li><span class="glyphicon glyphicon-play"></span>Padronização</li>
-							<li><span class="glyphicon glyphicon-play"></span>Facilidade de Adaptação de Interface</li>
-						</ul>
+					<div class="box-service col-md-3 no-border">
+						<div class="row center"><img src="img/aws.png"></div>
+						<h3>Experiência</h3>
+						<p>Desde 2005, implementamos mais de 50 projetos em 10 países.</p>
 					</div>
 				</div>	
 			</div>
@@ -97,40 +79,26 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Cloud</h2>
 				<img src="img/bg-cloud.jpg" alt="Cloud" class="img-responsive img-service">
-				<p class="text-service">Primeiro parceiro da Amazon Web Services na América Latina, somos revendedores autorizados para oferecer consultoria especializada e suporte customizável. Desenhamos e validamos a arquitetura, migramos aplicações, fazemos testes de carga e oferecemos soluções de alta disponibilidade e escalabilidade. São cinco planos diferentes moldados de acordo com sua necessidade.</p>
 				<div id="services" class="row">
-					<div class="box-service col-md-4">
-						<img src="img/cloud-icon-1.png">
-						<h3>Consultoria Especializada</h3>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Desenho e validação de arquitetura</li>
-							<li><span class="glyphicon glyphicon-play"></span>Migração de aplicações</li>
-							<li><span class="glyphicon glyphicon-play"></span>Testes de carga</li>
-							<li><span class="glyphicon glyphicon-play"></span>Desenho e validação de arquitetura</li>
-							<li><span class="glyphicon glyphicon-play"></span>Soluções de alta disponibilidade e escalabilidade</li>
-						</ul>
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/experiencia.png"></div>
+						<h3>Experiência</h3>
+						<p>Primeiro parceiro da Amazon Web Services na América Latina</p>
 					</div>
-					<div class="box-service col-md-4">
-						<img src="img/cloud-icon-2.png">
-						<h3>Revendedores Autorizados</h3>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Amazon Business Suport</li>
-							<li><span class="glyphicon glyphicon-play"></span>Suporte Standard em português</li>
-							<li><span class="glyphicon glyphicon-play"></span>Especialista para configuração da sua rede</li>
-							<li><span class="glyphicon glyphicon-play"></span>Desenho e validação de arquitetura</li>
-							<span>&nbsp;</span>
-						</ul>
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/suporte.png"></div>
+						<h3>Consultoria e suporte</h3>
+						<p>Somos revendedores autorizados para oferecer consultoria especializada e suporte customizável.</p>
 					</div>
-					<div class="box-service col-md-4 border-right">
-						<img src="img/cloud-icon-3.png">
-						<h3>Suporte customizável</h3>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Standard 8 x 5 em português</li>
-							<li><span class="glyphicon glyphicon-play"></span>Suporte 24 x 7 em português</li>
-							<li><span class="glyphicon glyphicon-play"></span>Monitoramento</li>
-							<li><span class="glyphicon glyphicon-play"></span>Nuvens públicas e privadas</li>
-							<span>&nbsp;</span>
-						</ul>
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/especializacao.png"></div>
+						<h3> Especialização</h3>
+						<p>Desenhamos e validamos a arquitetura, migramos aplicações, fazemos testes de carga e oferecemos soluções de alta disponibilidade e escalabilidade. </p>
+					</div>
+					<div class="box-service col-md-3 no-border">
+						<div class="row center"><img src="img/planos.png"></div>
+						<h3> Planos</h3>
+						<p>São cinco planos diferentes moldados de acordo com sua necessidade.</p>
 					</div>
 				</div>
 			</div>
@@ -139,53 +107,26 @@ title: O que fazemos
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Middleware</h2>
 				<img src="img/middleware.png" alt="Middleware" class="img-responsive img-service">
-				<p class="text-service">Experiência em projetos de consultoria, implementação e troubleshooting. Gerenciamento de processos de negócio BPM. SOA - consultoria para arquitetura e aplicação de referência, governança e centro de excelência. Instalação e tunning para melhor utilização de infraestrutura. Mais de 7 anos e 30 clientes com as melhores soluções do mercado.</p>
 				<div id="services" class="row">
-					<div class="box-service border-right col-md-3">
-						<h1>1.</h1>
+					<div class="box-service col-md-3">
+						<div class="row center"><img src="img/integracao.png"></div>						
 						<h3>Integração</h3>
-						<p>Projetos de consultoria, implementação e troubleshooting.</p>
-						
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Service Bus - ESB</li>
-							<li><span class="glyphicon glyphicon-play"></span>Application Integration - EAI</li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-						</ul>
+						<p>PExperiência em projetos de consultoria, implementação e troubleshooting.Mais de 7 anos e 30 clientes com as melhores soluções do mercado</p>
 					</div>
 					<div class="box-service col-md-3">
-						<h1>2.</h1>
+						<div class="row center"><img src="img/bpm.png"></div>
 						<h3>BPM</h3>
-						<p>Gerenciamento de Processos de Negócio.</p>
-						
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Modelagem de Processos</li>
-							<li><span class="glyphicon glyphicon-play"></span>Automação dos Processos</li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-							<li><span style="color:#fff;" class="glyphicon glyphicon-play"></span></li>
-						</ul>
+						<p>Gerenciamento de processos de negócio, modelagem e automação.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<h1>3.</h1>
-						<h3>SOA</h3>
-						<p>Consultoria para definição de uma Arquitetura Orientada a Serviços.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Arquitetura de Referência</li>
-							<li><span class="glyphicon glyphicon-play"></span>Aplicação de Referência</li>
-							<li><span class="glyphicon glyphicon-play"></span>Governança</li>
-							<li><span class="glyphicon glyphicon-play"></span>Centro de Excelência</li>
-						</ul>
+						<div class="row center"><img src="img/soa.png"></div>
+						<h3>Service oriented architecture</h3>
+						<p>Consultoria para arquitetura e aplicação de referência, governança e centro de excelência.</p>
 					</div>
-					<div class="box-service col-md-3 border-right">
-						<h1>4.</h1>
-						<h3>Infra Estrutura</h3>
-						<p>Serviços e consultoria para melhor utilização da infra estrutura.</p>
-						<ul>
-							<li><span class="glyphicon glyphicon-play"></span>Instalação</li>
-							<li><span class="glyphicon glyphicon-play"></span>Tunning</li>
-							<li><span class="glyphicon glyphicon-play"></span>Troubleshooting</li>
-							<li><span class="glyphicon glyphicon-play"></span>Infra em Cloud</li>
-						</ul>
+					<div class="box-service col-md-3 no-border">
+						<div class="row center"><img src="img/infra.png"></div>
+						<h3>Infraestrutura</h3>
+						<p>Instalação, tunning, troubleshooting para melhor utilização de infraestrutura em cloud.</p>
 					</div>
 				</div>	
 			</div>
