--- a/quem-somos.html
+++ b/quem-somos.html
@@ -5,8 +5,7 @@ title: Quem Somos
 	<section class="intro-who-we-are">
 		<div class="container">
 			<div class="hero-content col-md-9">
-				<h1><span class="decor-1"></span>Somos uma empresa de desenvolvimento</h1>
-				<h2>de software ágil com atuação global<span class="decor-2"></span></h2>
+				<h1><span class="decor-1"></span>Somos uma empresa de desenvolvimento ágil de software com atuação global<span class="decor-2"></span></h2>
 			</div>
 		</div>
 	</section>
@@ -19,11 +18,11 @@ title: Quem Somos
 					<h2>Somos especializados em comércio <br>eletrônico, mobile commerce e cloud.”</h2>	
 				</div>
 				<div class="col-md-3 align-right">
-					<span><img class="img-responsive" src="img/team.png" alt="Team CS"></span>
+					<span><img class=" " src="img/team.png" alt="Team CS"></span>
 				</div>
 			</div>
 			<div class="about">
-				<p>Desde a nossa fundação, em 2001, já desenvolvemos software para mais de 25 países a partir de nossos escritórios no Rio de Janeiro e em São Paulo. Trabalhamos com desenvolvimento web e mobile e somos experts em middleware e cloud computing da AWS. Acreditamos que Lean, Engenharia de software ágil e UX são essenciais para desenvolver produtos digitais de sucesso.</p>
+				<p>Desde a nossa fundação, em 2001, já desenvolvemos software para mais de 25 países a partir de nossos escritórios no Rio de Janeiro e em São Paulo. Trabalhamos com desenvolvimento web e mobile e somos experts em middleware e cloud computing da AWS. Acreditamos que lean, engenharia de software ágil e UX são essenciais para desenvolver produtos digitais de sucesso.</p>
 				
 			</div>
 		</div>
@@ -53,22 +52,20 @@ title: Quem Somos
 			<header>
 				<h1 class="title"> Fundo Moonlight</h1>
 			</header>
-			<div class="row content-moonlight">
-				<div class="row">
-					<img src="img/logo-moon.png" alt="Moonlight" class="img-responsive">	    
+			<div class="content-moonlight">
+				<div class="col-md-12">
+					<img src="img/logo-moon.png" alt="Moonlight">
 				</div>
-				<div class="row">
-					<div class="col-md-2">
+				<div class="col-md-4 space">
 					<div class="fix">
-						<a href="#" class="center"><img src="img/logo-fix.png" alt="Fix" class="img-responsive"></a>
+						<a href="http://www.cloudretail.com.br" target="_blank"><img src="img/logo-fix.png" alt="Fix" class=" "></a>
 					</div>
 					<div class="cloud">
-						<a href="#"><img src="img/logo-cloud.png" alt="Fix" class="img-responsive"></a>
+						<a href="http://www.cloudretail.com.br" target="_blank"><img src="img/logo-cloud.png" alt="Fix" class=" "></a>
 					</div>
 				</div>
-				<div class="col-md-9 align-right">
+				<div class="col-md-8 align-right">
 					<p>Em 2012, criamos o Fundo Moonlight para investir em novos empreendimentos idealizados pelos profissionais que atuam na nossa companhia como desenvolvedores. São duas ideias principais: estimular a criação de negócios inovadores por funcionários que  trabalham em seu tempo livre (por isso o "Moonlight") e reter bons talentos. Desta forma surgiram duas empresas: a CloudRetail, especializada em comércio multicanal, e a FIX Support, que oferece suporte em cloud computing.</p>
-				</div>
 				</div>
 			</div>
 		</div>
@@ -80,44 +77,44 @@ title: Quem Somos
 			</header>
 		    <ul class="team">
 		    	<li>
-		    		<a href="#"><img src="img/fernando.png" alt="Fernando De La Riva" class="img-responsive"></a>
+		    		<a href="#"><img src="img/fernando.png" alt="Fernando De La Riva" class=" "></a>
 		    		<h3>Fernando De La Riva</h3>
-		    		<h6>sócio-fundador e diretor-executivo</h6>
+		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/oliveira.png" alt="Victor Oliveira" class="img-responsive"></a>
+		    		<a href="#"><img src="img/oliveira.png" alt="Victor Oliveira" class=" "></a>
 					<h3>Victor Oliveira</h3>
-		    		<h6>sócio-fundador e diretor-técnico</h6>
+		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/roma.png" alt="Vitor Roma" class="img-responsive"></a>
+		    		<a href="#"><img src="img/roma.png" alt="Vitor Roma" class=" "></a>
 		    		<h3>Vitor Roma</h3>
-		    		<h6>sócio-fundador e diretor-financeiro</h6>
+		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/corintho.png" alt="Corintho Assunção" class="img-responsive"></a>
+		    		<a href="#"><img src="img/corintho.png" alt="Corintho Assunção" class=" "></a>
 		    		<h3>Corintho Assunção</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/bruno.png" alt="Bruno Moneró" class="img-responsive"></a>
+		    		<a href="#"><img src="img/bruno.png" alt="Bruno Moneró" class=" "></a>
 		    		<h3>Bruno Moneró</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/avatar.png" alt="Alexandre Bairos" class="img-responsive"></a>
+		    		<a href="#"><img src="img/alexandre.png" alt="Alexandre Bairos" class=" "></a>
 		    		<h3>Alexandre Bairos</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/lima.png" alt="Victor Lima" class="img-responsive"></a>
+		    		<a href="#"><img src="img/lima.png" alt="Victor Lima" class=" "></a>
 		    		<h3>Victor Lima</h3>
 		    		<h6>gerente da área mobile e <br>sócio-fundador da CloudRetail</h6>
 		    	</li>
 		    	
 		    	<li>
-		    		<a href="#"><img src="img/avatar.png" alt="Leandro Alves" class="img-responsive"></a>
-		    		<h3>Victor Oliveira</h3>
+		    		<a href="#"><img src="img/avatar.png" alt="Leandro Alves" class=" "></a>
+		    		<h3>Leandro Alves</h3>
 		    		<h6>gerente da área de suporte e <br>sócio-fundador da FIX</h6>
 		    	</li>
 		    </ul>
