--- a/clientes.html
+++ b/clientes.html
@@ -34,12 +34,7 @@ title: Clientes
 						<p>Em apenas quatro meses, desenvolvemos com o time da Dafiti um novo aplicativo universal (para iOS e Android em tablets e smartphones) de mobile commerce. A loja online tem atuação em vários países da América Latina e um portfólio de 2 mil marcas e 125 mil produtos.  “Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”, destaca Roberto Hengist, gerente de TI da loja.</p>
 					</div>
 					<div class="row logo-clients">
-						<ul>
-							<li class="client-varejo-1"></li>
-							<li class="client-varejo-2"></li>
-							<li class="client-varejo-3"></li>
-							<li class="client-varejo-4"></li>
-						</ul>
+						<img src="img/logos-midia-clientes.png">
 					</div>
 				</div>
 			</div>
