--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -31,7 +31,7 @@ title: O que fazemos
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="img/services-icon-1.png"></div>
 						<h3 class="">Produtos web</h3>
-						<p>Trabalhamos com as mais diversas tecnologias: Ruby, Phyton, PHP, MSFT e Java.</p>
+						<p>Trabalhamos com as mais diversas tecnologias: Ruby, Python, PHP, MSFT e Java.</p>
 					</div>
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="img/services-icon-2.png"></div>
