Ajustes de conteúdo

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -5,7 +5,7 @@ title: Quem Somos
 	<section class="intro-who-we-are">
 		<div class="container">
 			<div class="hero-content col-md-9">
-				<h1><span class="decor-1"></span>Somos uma empresa de desenvolvimento ágil de software com atuação global<span class="decor-2"></span></h2>
+				<h1><span class="decor-1"></span>Somos especializados em comércio eletrônico, desenvolvimento mobile e cloud computing<span class="decor-2"></span></h2>
 			</div>
 		</div>
 	</section>
@@ -15,7 +15,7 @@ title: Quem Somos
 			<div class="row">
 				<div class="col-md-8 spotlight">
 					<span class="decor-3"></span>
-					<h2>Somos especializados em comércio <br>eletrônico, mobile commerce e cloud.”</h2>	
+					<h2>Somos especializados em comércio <br>eletrônico, mobile  e cloud.”</h2>	
 				</div>
 				<div class="col-md-3 align-right">
 					<span><img class=" " src="img/team.png" alt="Team CS"></span>
@@ -77,43 +77,43 @@ title: Quem Somos
 			</header>
 		    <ul class="team">
 		    	<li>
-		    		<a href="#"><img src="img/fernando.png" alt="Fernando De La Riva" class=" "></a>
+		    		<img src="img/fernando.png" alt="Fernando De La Riva" class=" ">
 		    		<h3>Fernando De La Riva</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/oliveira.png" alt="Victor Oliveira" class=" "></a>
+		    		<img src="img/oliveira.png" alt="Victor Oliveira" class=" ">
 					<h3>Victor Oliveira</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/roma.png" alt="Vitor Roma" class=" "></a>
+		    		<img src="img/roma.png" alt="Vitor Roma" class=" ">
 		    		<h3>Vitor Roma</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/corintho.png" alt="Corintho Assunção" class=" "></a>
+		    		<img src="img/corintho.png" alt="Corintho Assunção" class=" ">
 		    		<h3>Corintho Assunção</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/bruno.png" alt="Bruno Moneró" class=" "></a>
+		    		<img src="img/bruno.png" alt="Bruno Moneró" class=" ">
 		    		<h3>Bruno Moneró</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/alexandre.png" alt="Alexandre Bairos" class=" "></a>
+		    		<img src="img/alexandre.png" alt="Alexandre Bairos" class=" ">
 		    		<h3>Alexandre Bairos</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a href="#"><img src="img/lima.png" alt="Victor Lima" class=" "></a>
+		    		<img src="img/lima.png" alt="Victor Lima" class=" ">
 		    		<h3>Victor Lima</h3>
 		    		<h6>gerente da área mobile e <br>sócio-fundador da CloudRetail</h6>
 		    	</li>
 		    	
 		    	<li>
-		    		<a href="#"><img src="img/avatar.png" alt="Leandro Alves" class=" "></a>
+		    		<img src="img/avatar.png" alt="Leandro Alves" class=" ">
 		    		<h3>Leandro Alves</h3>
 		    		<h6>gerente da área de suporte e <br>sócio-fundador da FIX</h6>
 		    	</li>
