--- a/clientes.html
+++ b/clientes.html
@@ -17,7 +17,7 @@ title: Clientes
 						<li><a href="#industria">Indústria, Transporte e Óleo e Gás </a></li>
 						<li><a href="#telecom">Telecom</a></li>
 						<li><a href="#tecnologia">Tecnologia</a></li>
-						<li><a href="#servicos">Serviços Financeiros</a></li>
+						<!-- <li><a href="#servicos">Serviços Financeiros</a></li> -->
 					</ul>
 				</nav>
 			</div>
@@ -127,16 +127,13 @@ title: Clientes
 				</div>
 			</div>
 		</section>
-		<section  id="servicos" class="box box-color">
+		<!-- <section  id="servicos" class="box box-color">
 			<div class="container">
 				<h2>Serviços Financeiros</h2>
 				<div class="row">
-					<img src="img/logo-cetip.png" class="logo">
-					<div class="col-md-6 content-img">
-						<img src="img/case-cetip.jpg" class=" ">
-					</div>
+				
 					<div class="col-md-6 content-text">
-						<p>Para atender a mais de 15 mil instituições participantes e mais de R$ 40 bilhões em liquidações por dia, a Cetip, integradora do mercado financeiro que oferece serviços de registro, central depositária, negociação e liquidação de ativos e títulos, precisava de um parceiro com know-how que gerasse mais rapidez e controle de seus processos. Nosso time ajudou a desenvolver produtos de alto valor agregado, que ajudaram a Cetip a entregar serviços de informação de crédito automotivo com mais sucesso.</p>
+						<p></p>
 					</div>
 					<div class="row logo-clients">
 						<ul>
@@ -146,5 +143,5 @@ title: Clientes
 						</ul>
 					</div>
 			</div>
-		</section>
+		</section> -->
 	</section>
