--- a/clientes.html
+++ b/clientes.html
@@ -50,12 +50,12 @@ title: Clientes
 					<div class="col-md-6 content-text" class=" ">
 						<p>A Concrete Solutions trabalha para a Globo.com há 12 anos e durante todo este período sempre foi sinônimo de profissionais de alto nível e parceria. Construímos uma relação de confiança mútua que se perpetua e que traz resultados em todos os projetos em que eles já estiveram ou ainda estão envolvidos.</p>
 					</div>
-					<div class="row logo-clients">
-						<ul>
-							<li class="client-midia-1"></li>
-							<li class="client-midia-2"></li>
-							<li class="client-midia-3"></li>
-							<li class="client-midia-4"></li>
+					<div class="logo-clients">
+						<ul class="row">
+							<li class="client-midia-1 col-md-3"></li>
+							<li class="client-midia-2 col-md-3"></li>
+							<li class="client-midia-3 col-md-3"></li>
+							<li class="client-midia-4 col-md-3"></li>
 						</ul>
 					</div>
 				</div>
