--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -111,7 +111,7 @@ title: O que fazemos
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="img/integracao.png"></div>						
 						<h3>Integração</h3>
-						<p>PExperiência em projetos de consultoria, implementação e troubleshooting.Mais de 7 anos e 30 clientes com as melhores soluções do mercado</p>
+						<p>Experiência em projetos de consultoria, implementação e troubleshooting.Mais de 7 anos e 30 clientes com as melhores soluções do mercado</p>
 					</div>
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="img/bpm.png"></div>
