--- a/quem-somos.html
+++ b/quem-somos.html
@@ -33,6 +33,15 @@ title: Quem Somos
 				<h1 class="title"> Diferenciais</h1>
 			</header>
 		    <div class="map">
+		    	<ul class="text-points">
+	    			<li>Já desenvolvemos software em mais de 25 países</li>
+	    			<li>Implantamos ágil desde 2006</li>
+	    			<li>Somos uma das maiores desenvolvedoras de mobile commerce do Brasil</li>
+	    			<li>Somos o primeiro parceiro da AWS na América Latina</li>
+	    			<li>Já colocamos mais  de 50 clientes na nuvem desde 2009</li>
+	    			<li>Fomos responsáveis por mais de 50 projetos de  e-commerce para mais de 40 clientes</li>
+	    			<li>Já criamos mais de 25  aplicativos mobile</li>
+	    		</ul>
 		    	<div class="points">
 		    		<ul>
 		    			<li class="nota1"><img src="img/nota1.png" alt=""></li>
@@ -77,43 +86,44 @@ title: Quem Somos
 			</header>
 		    <ul class="team">
 		    	<li>
-		    		<img src="img/fernando.png" alt="Fernando De La Riva" class=" ">
+		    		<a class="tooltip-1" data-placement="right" title="Engenheiro de computação pela PUC-RJ, especialista pela Coppead, tem MBA pela universidade de Columbia e mestre pela London Business School. É empreendedor serial e já ajudou a desenvolver mais de 24 startups de tecnologia. Foi sócio-fundador da Atness Computing Services, consultor, gerente de projetos e COO da Teknoland do Brasil (empresa do Grupo Terra Telefônica) e especialista de produto e gerente comercial da NCD e da IBM (Risc 6000)."><img src="img/fernando.png" alt="Fernando De La Riva"></a>
 		    		<h3>Fernando De La Riva</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/oliveira.png" alt="Victor Oliveira" class=" ">
+		    		<a  class="tooltip-2" data-placement="right" title="Engenheiro de computação pela PUC-RJ, tem formação  em Rational Process Fundamentals, Implementing RUP e Requirements Management with Use Cases, Configuration Management, Iterative Project Management. É Scrum Master certificado e foi sócio-fundador da Atness Computing Services e arquiteto e e-consultant da Teknoland do Brasil. Participou como consultor, analista e arquiteto em projetos das empresas Procter & Gamble, Ceras Johnson, Americanas.com, Globo.com, entre outras."><img src="img/oliveira.png" alt="Victor Oliveira"></a>
 					<h3>Victor Oliveira</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/roma.png" alt="Vitor Roma" class=" ">
+		    		<a  class="tooltip-3" data-placement="left" title="Economista,  MBA em Finanças e Mestre em administração pelo IBMEC com tese desenvolvida na área de Empreendedorismo.
+Teve 10 anos de experiência nas áreas de gestão da Rede Globo de Televisão , Globosat Programadora e Lafarge antes de montar a Concrete Solutions."><img src="img/roma.png" alt="Vitor Roma"></a>
 		    		<h3>Vitor Roma</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/corintho.png" alt="Corintho Assunção" class=" ">
+		    		<a class="tooltip-4" data-placement="right" title="Graduado pela PUC-RJ, assume hoje a área de operações em São Paulo. Já foi analista de sistemas na Embria e consultor na Oi/Telemar antes de ingressar na Concrete Solutions, em 2005."><img src="img/corintho.png" alt="Corintho Assunção"></a>
 		    		<h3>Corintho Assunção</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/bruno.png" alt="Bruno Moneró" class=" ">
+		    		<a class="tooltip-5" data-placement="right" title="Formado na PUC-Rio em Ciência da Computação, tem MBA na FGV em Gestão Empresarial e uma grande bagagem de gestão de projetos e pessoas. Possui certificações PSM (Professional Scrum Master) e PSPO (Professional Scrum Product Owner). Tem bastante experiência com o desenvolvimento de sites de comércio eletrônico, trabalhando em projetos como B2W e Casa&Vídeo. Está na Concrete desde 2005 e já foi consultor da Accenture e analista na Refinaria de Manguinhos."><img src="img/bruno.png" alt="Bruno Moneró"></a>
 		    		<h3>Bruno Moneró</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/alexandre.png" alt="Alexandre Bairos" class=" ">
+		    		<a class="tooltip-6" data-placement="left" title="Formado em Engenharia da Computação pela UERJ, está na Concrete Solutions desde 2001, onde começou como estagiário. Já participou de importantes projetos em clientes como Globo.com, Prêmio Innovare, Infoglobo, Globosat, Casa & Vídeo e em algumas startups, como ChefTV e Tamboro. Seu lema pessoal no momento é 'Be agile, be lean, be mindful.'"><img src="img/alexandre.png" alt="Alexandre Bairos"></a>
 		    		<h3>Alexandre Bairos</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<img src="img/lima.png" alt="Victor Lima" class=" ">
+		    		<a class="tooltip-7" data-placement="right" title="Na Concrete Solutions desde 2007, assume a gerência de desenvolvimento de produtos mobile enquanto atua como CEO da CloudRetail, empresa do Fundo Moonlight que pretende revolucionar a forma como as pessoas compram em canais móveis. É desenvolvedor desde 1999, e começou a desenvolver apps nativos para iOS em 2010. Antes da Concrete Solutions, foi desenvolvedor de software na IBM Brasil."><img src="img/lima.png" alt="Victor Lima"></a>
 		    		<h3>Victor Lima</h3>
 		    		<h6>gerente da área mobile e <br>sócio-fundador da CloudRetail</h6>
 		    	</li>
 		    	
 		    	<li>
-		    		<img src="img/avatar.png" alt="Leandro Alves" class=" ">
+		    		<a class="tooltip-8" data-placement="right" title="Na Concrete Solutions desde 2006, é a gerente da área de suporte enquanto atua como CEO da FIX Support, empresa do Fundo Moonlight que oferece suporte na nuvem. Já foi gerente na Good Quality Alimentos e sargento do Exército Brasileiro no 1º GAAAe."><img src="img/avatar.png" alt="Leandro Alves"></a>
 		    		<h3>Leandro Alves</h3>
 		    		<h6>gerente da área de suporte e <br>sócio-fundador da FIX</h6>
 		    	</li>
