--- a/quem-somos.html
+++ b/quem-somos.html
@@ -86,43 +86,43 @@ title: Quem Somos
 			</header>
 		    <ul class="team">
 		    	<li>
-		    		<a class="tooltip-1" data-placement="bottom" title="Engenheiro de computação pela PUC-RJ, especialista pela Coppead, MBA pela universidade de Columbia e Mestre pela London Business School. Empreendedor serial, ajudou a desenvolver mais de 25 startups de tecnologia. Fundou seis empresas, produziu uma saída, uma cratera lunar, uma aterrissagem suave e três empresas operacionais. Atualmente, é membro do conselho do Grupo Universal Decor e colunista de negócios digitais na Exame.com. Foi professor de avaliação de ativos na Fundação Getúlio Vargas e mentor do Lean Startup Machine. Acredita que a vida é curta demais para fazer software errado e que não existe desperdício maior do que fazer de forma perfeita um produto que ninguém quer usar."><img src="img/fernando.png" alt="Fernando De La Riva"></a>
+		    		<a class="tooltip-1" data-placement="bottom" data-content="Engenheiro de computação pela PUC-RJ, especialista pela Coppead, MBA pela universidade de Columbia e Mestre pela London Business School. Empreendedor serial, ajudou a desenvolver mais de 25 startups de tecnologia. Fundou seis empresas, produziu uma saída, uma cratera lunar, uma aterrissagem suave e três empresas operacionais. Atualmente, é membro do conselho do Grupo Universal Decor e colunista de negócios digitais na Exame.com. Foi professor de avaliação de ativos na Fundação Getúlio Vargas e mentor do Lean Startup Machine. Acredita que a vida é curta demais para fazer software errado e que não existe desperdício maior do que fazer de forma perfeita um produto que ninguém quer usar."><img src="img/fernando.png" alt="Fernando De La Riva"></a>
 		    		<h3>Fernando De La Riva</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a  class="tooltip-2" data-placement="bottom" title="Engenheiro de computação pela PUC-RJ, é responsável pela prática de Cloud Computing na Concrete. Foi e-consultant na Teknoland Brasil e fundador da Atness Software. É certificado Scrum Practitioner pela Scrum Alliance e Scrum Master com Ken Schwaber em San José, na Califórnia. É Professional Scrum Master I (PSM I), Professional Scrum Developer Trainer (PST) para Java, Professional Scrum Product Owner I (PSPO I), Professional Scrum Product Owner II (PSPO II), Professional Scrum Product Owner Trainer (PST), AWS Business Professional, AWS Technical Professional e associado AWS Certified Solutions Architect."><img src="img/oliveira.png" alt="Victor Oliveira"></a>
+		    		<a  class="tooltip-2" data-placement="bottom" data-content="Engenheiro de computação pela PUC-RJ, é responsável pela prática de Cloud Computing na Concrete. Foi e-consultant na Teknoland Brasil e fundador da Atness Software. É certificado Scrum Practitioner pela Scrum Alliance e Scrum Master com Ken Schwaber em San José, na Califórnia. É Professional Scrum Master I (PSM I), Professional Scrum Developer Trainer (PST) para Java, Professional Scrum Product Owner I (PSPO I), Professional Scrum Product Owner II (PSPO II), Professional Scrum Product Owner Trainer (PST), AWS Business Professional, AWS Technical Professional e associado AWS Certified Solutions Architect."><img src="img/oliveira.png" alt="Victor Oliveira"></a>
 					<h3>Victor Oliveira</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a  class="tooltip-3" data-placement="bottom" title="Economista,  MBA em Finanças e Mestre em administração pelo IBMEC com tese desenvolvida na área de Empreendedorismo. Teve 10 anos de experiência nas áreas de gestão da Rede Globo de Televisão , Globosat Programadora e Lafarge antes de montar a Concrete Solutions."><img src="img/roma.png" alt="Vitor Roma"></a>
+		    		<a  class="tooltip-3" data-placement="bottom" data-content="Economista,  MBA em Finanças e Mestre em administração pelo IBMEC com tese desenvolvida na área de Empreendedorismo. Teve 10 anos de experiência nas áreas de gestão da Rede Globo de Televisão , Globosat Programadora e Lafarge antes de montar a Concrete Solutions."><img src="img/roma.png" alt="Vitor Roma"></a>
 		    		<h3>Vitor Roma</h3>
 		    		<h6>sócio-fundador</h6>
 		    	</li>
 		    	<li>
-		    		<a class="tooltip-4" data-placement="bottom" title="Graduado pela PUC-RJ, assume hoje a área de operações em São Paulo. Já foi analista de sistemas na Embria e consultor na Oi/Telemar antes de ingressar na Concrete Solutions, em 2005."><img src="img/corintho.png" alt="Corintho Assunção"></a>
+		    		<a class="tooltip-4" data-placement="bottom" data-content="Graduado pela PUC-RJ, assume hoje a área de operações em São Paulo. Já foi analista de sistemas na Embria e consultor na Oi/Telemar antes de ingressar na Concrete Solutions, em 2005."><img src="img/corintho.png" alt="Corintho Assunção"></a>
 		    		<h3>Corintho Assunção</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a class="tooltip-5" data-placement="bottom" title="Formado na PUC-Rio em Ciência da Computação, tem MBA na FGV em Gestão Empresarial e uma grande bagagem de gestão de projetos e pessoas. Possui certificações PSM (Professional Scrum Master) e PSPO (Professional Scrum Product Owner). Tem bastante experiência com o desenvolvimento de sites de comércio eletrônico, trabalhando em projetos como B2W e Casa&Vídeo. Está na Concrete desde 2005 e já foi consultor da Accenture e analista na Refinaria de Manguinhos."><img src="img/bruno.png" alt="Bruno Moneró"></a>
+		    		<a class="tooltip-5" data-placement="bottom" data-content="Formado na PUC-Rio em Ciência da Computação, tem MBA na FGV em Gestão Empresarial e uma grande bagagem de gestão de projetos e pessoas. Possui certificações PSM (Professional Scrum Master) e PSPO (Professional Scrum Product Owner). Tem bastante experiência com o desenvolvimento de sites de comércio eletrônico, trabalhando em projetos como B2W e Casa&Vídeo. Está na Concrete desde 2005 e já foi consultor da Accenture e analista na Refinaria de Manguinhos."><img src="img/bruno.png" alt="Bruno Moneró"></a>
 		    		<h3>Bruno Moneró</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a class="tooltip-6" data-placement="bottom" title="Formado em Engenharia da Computação pela UERJ, está na Concrete Solutions desde 2001, onde começou como estagiário. Já participou de importantes projetos em clientes como Globo.com, Prêmio Innovare, Infoglobo, Globosat, Casa & Vídeo e em algumas startups, como ChefTV e Tamboro. Seu lema pessoal no momento é 'Be agile, be lean, be mindful.'"><img src="img/alexandre.png" alt="Alexandre Bairos"></a>
+		    		<a class="tooltip-6" data-placement="bottom" data-content="Formado em Engenharia da Computação pela UERJ, está na Concrete Solutions desde 2001, onde começou como estagiário. Já participou de importantes projetos em clientes como Globo.com, Prêmio Innovare, Infoglobo, Globosat, Casa & Vídeo e em algumas startups, como ChefTV e Tamboro. Seu lema pessoal no momento é 'Be agile, be lean, be mindful.'"><img src="img/alexandre.png" alt="Alexandre Bairos"></a>
 		    		<h3>Alexandre Bairos</h3>
 		    		<h6>sócio</h6>
 		    	</li>
 		    	<li>
-		    		<a class="tooltip-7" data-placement="bottom" title="Na Concrete Solutions desde 2007, assume a gerência de desenvolvimento de produtos mobile enquanto atua como CEO da CloudRetail, empresa do Fundo Moonlight que pretende revolucionar a forma como as pessoas compram em canais móveis. É desenvolvedor desde 1999, e começou a desenvolver apps nativos para iOS em 2010. Recentemente, passou por um treinamento no Sillicon Valley Product Group, de Marty Cagan. Antes da Concrete Solutions, foi desenvolvedor de software na IBM Brasil."><img src="img/lima.png" alt="Victor Lima"></a>
+		    		<a class="tooltip-7" data-placement="bottom" data-content="Na Concrete Solutions desde 2007, assume a gerência de desenvolvimento de produtos mobile enquanto atua como CEO da CloudRetail, empresa do Fundo Moonlight que pretende revolucionar a forma como as pessoas compram em canais móveis. É desenvolvedor desde 1999, e começou a desenvolver apps nativos para iOS em 2010. Recentemente, passou por um treinamento no Sillicon Valley Product Group, de Marty Cagan. Antes da Concrete Solutions, foi desenvolvedor de software na IBM Brasil."><img src="img/lima.png" alt="Victor Lima"></a>
 		    		<h3>Victor Lima</h3>
 		    		<h6>gerente da área mobile e <br>sócio-fundador da CloudRetail</h6>
 		    	</li>
 		    	
 		    	<li>
-		    		<a class="tooltip-8" data-placement="bottom" title="Na Concrete Solutions desde 2006, é a gerente da área de suporte enquanto atua como CEO da FIX Support, empresa do Fundo Moonlight que oferece suporte na nuvem. Já foi gerente na Good Quality Alimentos e sargento do Exército Brasileiro no 1º GAAAe."><img src="img/avatar.png" alt="Leandro Alves"></a>
+		    		<a class="tooltip-8" data-placement="bottom" data-content="Na Concrete Solutions desde 2006, é a gerente da área de suporte enquanto atua como CEO da FIX Support, empresa do Fundo Moonlight que oferece suporte na nuvem. Já foi gerente na Good Quality Alimentos e sargento do Exército Brasileiro no 1º GAAAe."><img src="img/avatar.png" alt="Leandro Alves"></a>
 		    		<h3>Leandro Alves</h3>
 		    		<h6>gerente da área de suporte e <br>sócio-fundador da FIX</h6>
 		    	</li>
