--- a/carreira.html
+++ b/carreira.html
@@ -2,7 +2,7 @@
 layout: default
 title: Carreira
 ---
-	<section class="intro-jobs">
+	<section class="intro-jobs" data-stellar-background-ratio="0.2">
 		<div class="container">
 			<div class="hero-content col-md-8">
 				<h1>Vem trabalhar com a gente!</h1>
