--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-	<section class="intro">
+	<section id="intro-home" data-stellar-background-ratio="0.2" class="intro">
 		<div class="container">
 			<div class="hero-content">
 				<h5 class="text2">Nossos times usam</h5>
