--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -3,7 +3,7 @@ layout: default
 title: O que fazemos
 ---
     
-    <section class="intro-what-we-do">
+    <section class="intro-what-we-do" data-stellar-background-ratio="0.2">
 		<div class="container">
 			<div class="hero-content col-md-8">
 				<h1>Inspiração no Vale do Silício:</h1>
