--- a/quem-somos.html
+++ b/quem-somos.html
@@ -2,7 +2,7 @@
 layout: default
 title: Quem Somos
 ---
-	<section class="intro-who-we-are">
+	<section class="intro-who-we-are" data-stellar-background-ratio="0.2">
 		<div class="container">
 			<div class="hero-content col-md-9">
 				<h1><span class="decor-1"></span>Somos especializados em comércio eletrônico, desenvolvimento mobile e cloud computing<span class="decor-2"></span></h2>
