--- a/o-que-fazemos/index.html
+++ b/o-que-fazemos/index.html
@@ -21,25 +21,25 @@ title: O que fazemos
 		<section id="web-service" class="box">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Web</h2>
-				<img src="img/web.png" alt="Web" class="img-responsive img-service">
+				<img src="/img/web.png" alt="Web" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/times.png"></div>
+						<div class="row center"><img src="/img/times.png"></div>
 						<h3 class="">Time Multidisciplinares</h3>
 						<p>Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. </p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/services-icon-1.png"></div>
+						<div class="row center"><img src="/img/services-icon-1.png"></div>
 						<h3 class="">Produtos web</h3>
 						<p>Trabalhamos com as mais diversas tecnologias: Ruby, Python, PHP, MSFT e Java.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/services-icon-2.png"></div>
+						<div class="row center"><img src="/img/services-icon-2.png"></div>
 						<h3 class="">User Experience</h3>
 						<p>Acreditamos no design de produto orientado pela experiência do usuário (UX).</p>
 					</div>
 					<div class="box-service col-md-3 no-border">
-						<div class="row center"><img src="img/services-icon-3.png"></div>
+						<div class="row center"><img src="/img/services-icon-3.png"></div>
 						<h3 class="">Comércio eletrônico</h3>
 						<p>Somos especializados em e-commerce desde 2001 e temos bom conhecimento em Magento, IBM Websphere Smarter Commerce, ElasticPath e Spree.</p>
 					</div>
@@ -50,25 +50,25 @@ title: O que fazemos
 		<section id="mobile-service" class="box box-color">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Mobile</h2>
-				<img src="img/mobile.png" alt="Mobile" class="img-responsive img-service">
+				<img src="/img/mobile.png" alt="Mobile" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service border-right col-md-3">
-						<div class="row center"><img src="img/multicanal.png"></div>
+						<div class="row center"><img src="/img/multicanal.png"></div>
 						<h3>Muticanal</h3>
 						<p>Nossa estratégia é multicanal: trabalhamos com aplicações nativas em iOS e Android, web mobile e híbridas, envolvendo mobile commerce, autosserviço móvel e conteúdo.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/personalizacao.png"></div>
+						<div class="row center"><img src="/img/personalizacao.png"></div>
 						<h3>Customização</h3>
 						<p>Desenvolvemos soluções para alcançar o maior público possível sem perder funcionalidades e utilizamos a tecnologia mais adequada para cada tipo de problema.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/tecnologias.png"></div>
+						<div class="row center"><img src="/img/tecnologias.png"></div>
 						<h3>Tecnologias</h3>
 						<p>Combinamos código nativo com HTML 5 e jQuery Mobile.</p>
 					</div>
 					<div class="box-service col-md-3 no-border">
-						<div class="row center"><img src="img/experiencia.png"></div>
+						<div class="row center"><img src="/img/experiencia.png"></div>
 						<h3>Experiência</h3>
 						<p>Desde 2005, implementamos mais de 50 projetos em 10 países.</p>
 					</div>
@@ -78,25 +78,25 @@ title: O que fazemos
 		<section id="cloud-service" class="box">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Cloud</h2>
-				<img src="img/bg-cloud.jpg" alt="Cloud" class="img-responsive img-service">
+				<img src="/img/bg-cloud.jpg" alt="Cloud" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/aws.png"></div>
+						<div class="row center"><img src="/img/aws.png"></div>
 						<h3>Experiência</h3>
 						<p>Primeiro parceiro da Amazon Web Services na América Latina</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/suporte.png"></div>
+						<div class="row center"><img src="/img/suporte.png"></div>
 						<h3>Consultoria e suporte</h3>
 						<p>Somos revendedores autorizados para oferecer consultoria especializada e suporte customizável.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/especializacao.png"></div>
+						<div class="row center"><img src="/img/especializacao.png"></div>
 						<h3> Especialização</h3>
 						<p>Desenhamos e validamos a arquitetura, migramos aplicações, fazemos testes de carga e oferecemos soluções de alta disponibilidade e escalabilidade. </p>
 					</div>
 					<div class="box-service col-md-3 no-border">
-						<div class="row center"><img src="img/planos.png"></div>
+						<div class="row center"><img src="/img/planos.png"></div>
 						<h3> Planos</h3>
 						<p>São cinco planos diferentes moldados de acordo com sua necessidade.</p>
 					</div>
@@ -106,25 +106,25 @@ title: O que fazemos
 		<section id="middleware-service" class="box box-color">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Middleware</h2>
-				<img src="img/middleware.png" alt="Middleware" class="img-responsive img-service">
+				<img src="/img/middleware.png" alt="Middleware" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/integracao.png"></div>						
+						<div class="row center"><img src="/img/integracao.png"></div>						
 						<h3>Integração</h3>
 						<p>Experiência em projetos de consultoria, implementação e troubleshooting.Mais de 7 anos e 30 clientes com as melhores soluções do mercado</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/bpm.png"></div>
+						<div class="row center"><img src="/img/bpm.png"></div>
 						<h3>BPM</h3>
 						<p>Gerenciamento de processos de negócio, modelagem e automação.</p>
 					</div>
 					<div class="box-service col-md-3">
-						<div class="row center"><img src="img/soa.png"></div>
+						<div class="row center"><img src="/img/soa.png"></div>
 						<h3>Service oriented architecture</h3>
 						<p>Consultoria para arquitetura e aplicação de referência, governança e centro de excelência.</p>
 					</div>
 					<div class="box-service col-md-3 no-border">
-						<div class="row center"><img src="img/infra.png"></div>
+						<div class="row center"><img src="/img/infra.png"></div>
 						<h3>Infraestrutura</h3>
 						<p>Instalação, tunning, troubleshooting para melhor utilização de infraestrutura em cloud.</p>
 					</div>
@@ -152,5 +152,5 @@ title: O que fazemos
 		</div>
 	</section>
 	<section id="practices" class="box box-color">
-		<img src="img/praticas.png" alt="8 Práticas" class="img-responsive">		
+		<img src="/img/praticas.png" alt="8 Práticas" class="img-responsive">		
 	</section>
