--- a/clientes/index.html
+++ b/clientes/index.html
@@ -26,15 +26,15 @@ title: Clientes
 			<div class="container">
 				<h2>Varejo Multicanal</h2>
 				<div class="row">
-					<img src="img/logo-dafiti.png" class="logo">
+					<img src="/img/logo-dafiti.png" class="logo">
 					<div class="col-md-6 content-img">
-						<img src="img/case-dafiti.jpg" class=" ">
+						<img src="/img/case-dafiti.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text">
 						<p>Em apenas quatro meses, desenvolvemos com o time da Dafiti um novo aplicativo universal (para iOS e Android em tablets e smartphones) de mobile commerce. A loja online tem atuação em vários países da América Latina e um portfólio de 2 mil marcas e 125 mil produtos.  “Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”, destaca Roberto Hengist, gerente de TI da loja.</p>
 					</div>
 					<div class="row logo-clients">
-						<img src="img/logos-midia-clientes.png">
+						<img src="/img/logos-midia-clientes.png">
 					</div>
 				</div>
 			</div>
@@ -43,9 +43,9 @@ title: Clientes
 			<div class="container">
 				<h2>Mídia</h2>
 				<div class="row">
-					<img src="img/logo-globo.png" class="logo">
+					<img src="/img/logo-globo.png" class="logo">
 					<div class="col-md-6 content-img">
-						<img src="img/case-globo.jpg" class=" ">
+						<img src="/img/case-globo.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text" class=" ">
 						<p>A Concrete Solutions trabalha para a Globo.com há 12 anos e durante todo este período sempre foi sinônimo de profissionais de alto nível e parceria. Construímos uma relação de confiança mútua que se perpetua e que traz resultados em todos os projetos em que eles já estiveram ou ainda estão envolvidos.</p>
@@ -65,9 +65,9 @@ title: Clientes
 			<div class="container">
 				<h2>Indústria, Transporte e Óleo e Gás</h2>
 				<div class="row">
-					<img src="img/logo-peg.jpg" class="logo">
+					<img src="/img/logo-peg.jpg" class="logo">
 					<div class="col-md-6 content-img">
-						<img src="img/case-peg.jpg" class=" ">
+						<img src="/img/case-peg.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text">
 						<p>Fomos os vencedores de uma concorrência global para criação de um sistema que controlasse a qualidade dos materiais usados nos produtos da Procter & Gamble, empresa global que oferece bens de consumo nas áreas de higiene pessoal, beleza, limpeza doméstica, e outros, em todo o mundo. Desenvolvemos, então, um portal de autoatendimento que é utilizado em mais de 80 plantas em 40 países, usando Oracle, SAP Business Conector e Concrete WorkFlow 2.0. Nos últimos 12 anos, fizemos diversas alterações de plataforma, inclusive a migração para a tecnologia .NET, mantendo o suporte e operação 24/7 do portal.</p>
@@ -87,9 +87,9 @@ title: Clientes
 			<div class="container">
 				<h2>Telecom</h2>
 				<div class="row">
-					<img src="img/logo-maroc.png" class="logo">
+					<img src="/img/logo-maroc.png" class="logo">
 					<div class="col-md-6 content-img">
-						<img src="img/case-maroc.jpg" class=" ">
+						<img src="/img/case-maroc.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text">
 						<p>A empresa de telefonia móvel precisava organizar e estruturar o conteúdo de seus serviços com alto valor agregado para seus clientes. Por meio de um portal de SDP (Service Delivery Portal) e em parceria com a MobileAware, oferecemos integração com plataformas de billing pré e pós pago, streaming, autenticação, gestores de conteúdo e entrega de interface web/mobile adaptativa. Para isso, utilizamos a plataforma de portal de acesso com Oracle/BEA Portal e o MobileAware Mobility Server.</p>
@@ -109,9 +109,9 @@ title: Clientes
 			<div class="container">
 				<h2>Tecnologia</h2>
 				<div class="row">
-					<img src="img/logo-locaweb.png" class="logo">
+					<img src="/img/logo-locaweb.png" class="logo">
 					<div class="col-md-6 content-img">
-						<img src="img/case-locaweb.jpg" class=" ">
+						<img src="/img/case-locaweb.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text">
 						<p>Para atender a Locaweb, líder em hosting e serviços de infraestrutura no Brasil e na América Latina, tivemos de montar times com alto nível de qualidade e senioridade, uma vez que a empresa é conhecida como um dos melhores núcleos de excelência em desenvolvimento de software e produtos digitais no Brasil. Para este projeto, reunimos profissionais especializados em Ruby on Rails, Java/Scala/Nodels, PHP e Kanban.</p>
