--- a/carreira/index.html
+++ b/carreira/index.html
@@ -4,7 +4,7 @@ title: Carreira
 ---
 	<section class="intro-jobs" data-stellar-background-ratio="0.2">
 		<div class="container">
-			<div class="hero-content col-md-8">
+			<div class="hero-content">
 				<h1>Vem trabalhar com a gente!</h1>
 			</div>
 		</div>
@@ -76,7 +76,7 @@ title: Carreira
 			    </div>
 			    <div class="col-md-4">
 					<div class="jumbotron">
-					    <h2>Desenvolvedor Android Senior</h2>
+					    <h2>Desenvolvedor Android Sênior</h2>
 					    <h4>O que esperamos do candidato:</h4>
 			        	<ul>
 							<p>Competências técnicas:</p>
@@ -145,7 +145,29 @@ title: Carreira
 			<div class="row">
 				<h2 class="secondary-title"><span class="purple">//</span> Rio de Janeiro<h2>
 				<div class="col-md-4">
-					<h4>Sem vagas no momento!</h4>
+					<div class="jumbotron">
+				        <h2>Programador Java Sênior</h2>
+				        <h4>O que esperamos do candidato:</h4>
+			        	<ul>			   
+							<p>Competências técnicas:</p>
+							<li>EJB e Websphere Application Server.</li>
+							<li>Alguma experiência no desenvolvimento de comércio eletrônico, integrações entre sistemas ou meios de pagamento, é bem-vinda.</li>
+							<li>Contato com KPIs de comércio eletrônico e como medi-los, é bem-vindo.</li>
+							<li>Conhecimento de boas práticas de testes automatizados unitários, funcionais de web, não-funcionais de carga e robustez, também é bem-vindo.</li>
+							<li>Contato com visões de negócios, como foco em valor gerado ou aprendizado validado, também é bem-vindo.</li>
+							<li>A Insatisfação com o pouquíssimo uso de método científico na criação de um produto é bastante bem-vinda.</li>
+						</ul>
+						<h5>Favor enviar currículo atualizado.</h5>
+						<h4>O que oferecemos:</h4>
+						<ul>
+							<li> Ajuda de custo para pessoas que não sejam da cidade de São Paulo e que queiram vir trabalhar conosco.</li>
+							<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
+							<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
+							<li> Valorização das pessoas e não de processos.</li>
+							<li> Salário compatível com o mercado.</li>
+						</ul>
+				        <a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master">candidatar-se</a>
+				    </div>
 			    </div>
 			</div>
 			<div class="row">
@@ -157,7 +179,114 @@ title: Carreira
 			<div class="row">
 				<h2 class="secondary-title"><span class="purple">//</span> Fix<h2>
 				<div class="col-md-4">
-					<h4>Sem vagas no momento!</h4>
+					<div class="jumbotron">
+				        <h2>PDBA/AD</h2>
+				        <h4>O que esperamos do candidato:</h4>
+			        	<ul>			   
+							<p>Habilidades Fundamentais:</p>
+							<li>Experiência com administração de MySQL e Oracle</li>
+						</ul>
+						<ul>			   
+							<p>Desejável:</p>
+							<li>MongoDB, Openlink Virtuoso, Redis, Hbase</li>
+							<li>Modelagem de dados</li>
+							<li>Tuning de query</li>
+							<li>Programação em banco de dados (scripts de carga, procedures)</li>
+							<li>CArquiteturas com High Availability</li>
+							<li>Inglês fluente</li>
+						</ul>
+			        	<ul>			   
+							<p>Plus:</p>
+							<li>Big Data</li>
+							<li>Banco de Dados na nuvem</li>
+							<li>No-SQLs</li>
+							<li>Conhecimentos em Web Semântic</li>
+							<li>Sparql</li>
+							<li>Python/Django,Ruby/Rails, Javascript</li>
+						</ul>
+						<h5>Horário: 9h às 18:30</h5>
+						<h5>Local: Barra da Tijuca</h5>
+						<h5>Enviar currículo com assunto [GCDBRJ]</h5>
+				        <a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
+				    </div>
+			    </div>
+			    <div class="col-md-4">
+					<div class="jumbotron">
+				        <h2>OPERAÇÃO TELECOM PLENO</h2>
+				        <h4>O que esperamos do candidato:</h4>
+			        	<ul>			   
+							<p>Experiência:</p>
+							<li>Experiência como analista de telecomunicações</li>
+							<li>Perfil pleno</li>
+						</ul>
+						<ul>			   
+							<p>Fundamental:</p>
+							<li>Conhecimento protocolo TCP/IPv4 e TCP/IPv6</li>
+							<li>Instalação e utilização de Windows XP, 7, MacOS X, Ubuntu, Mint e Debian</li>
+							<li> Instalação e utilização de Office, OpenOffice, GoogleDocs</li>
+							<li>Experiência com serviços online (internet, email, instant message, redes sociais e outros)</li>
+							<li>Experiência com plataforma Cisco (Cisco Catalyst, Cisco CRS, Cisco Nexus)</li>
+							<li>Experiência com protocolos de roteamento (RIP, BGP, iBGP, HSRP, OSPF, MPLS)</li>
+							<li>Configuração e operação de ACL, NAT, VLAN e Spanning Tree</li>
+							<li>Experiência com cabeamento estruturado</li>
+							<li>Teste de cabos metálicos ou fibras (Fluke e outros)</li>
+							<li>Ensino superior cursando ou completo (Eng. Computação ou Redes, Ciência da Computação, Tecnologia da Informação ou Redes)</li>
+							<li>Inglês nível intermediário</li>
+							<li>Trabalhar em regime de plantão (Turno noite, 15 às 22 horas)</li>
+						</ul>
+			        	<ul>			   
+							<p>Desejável:</p>
+							<li>Ferramenta de servicedesk/workflow (Service-now, BMC, CA)</li>
+							<li>Ferramenta de monitoramento (Cricket/Cacti, Nagios, SiteScope)</li>
+							<li>Conhecimento básico de distribuições Linux Server (Redhat/CentOS ou Debian) e Windows Server (2000, 2003 ou 2008)</li>
+							<li>Conhecimento básico de servidores WEB (IIS, Apache ou Nginx)</li>
+							<li>Conhecimento de Shell Script</li>
+							<li>Conhecimento de Iptables</li>
+							<li>Balanceadores de carga (Ace, F5)</li>
+							<li>Firewalls (ASA ou Checkpoint, VPN Clien-to-lan ou lan-to-lan, WebVPN, troubleshooting)</li>
+							<li>Certificação CCNA</li>
+							<li>ITIL V2 ou V3 Foundations</li>
+						</ul>
+				        <a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
+				    </div>
+			    </div>
+			    <div class="col-md-4">
+					<div class="jumbotron">
+				        <h2>SUPORTE PUBLICAÇÃO</h2>
+				        <h4>O que esperamos do candidato:</h4>
+			        	<ul>			   
+							<p>Fundamental:</p>
+							<li>Experiência como Analista de Suporte</li>
+						</ul>
+						<ul>			   
+							<p>Ambiente Linux:</p>
+							<li>Instalação</li>
+							<li>Configuração</li>
+							<li>Administração</li>
+							<li>Utilitários</li>
+							<li>Comandos Padrão</li>
+							<li>Administração de contas de usuários, grupos e permissões de acesso</li>
+							<li>Sistemas de arquivo</li>
+							<li>Gerenciamentos de Volumes Lógicos: LVM</li>
+							<li>TGerenciamento de processos</li>
+							<li>Configurações de serviços de rede: DNS, SMTP (postfix)</li>
+							<li>Programação em Shell Script: variáveis, loops e execução condicional</li>
+							<li>Entrada e saída, arquivos e execução de comandos</li>
+							<li>Expressões regulares (POSIX)</li>
+							<li>Web Server: Apache, Nginx</li>
+							<li>Inglês nível intermediário</li>
+						</ul>
+			        	<ul>			   
+							<p>Ambiente WEB:</p>
+							<li>Conceito de Web Server e Application Server</li>
+							<li>Banco de dados</li>
+							<li>HTML</li>
+							<li>Java Script</li>
+						</ul>
+						<h5>Horário: Segunda à sexta 00:00 às 06:00 e escala de plantão final de semana.</h5>
+						<h5>Local: Rio de Janeiro/Barra da Tijuca</h5>
+				        <a href="mailto:rh@fixsupport.com.br" class="btn-lg btn-master">candidatar-se</a>
+				    </div>
 			    </div>
 			</div>
 		</div>
