--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -4,8 +4,8 @@ title: Quem Somos
 ---
 	<section class="intro-who-we-are" data-stellar-background-ratio="0.2"s>
 		<div class="container">
-			<div class="hero-content col-md-9">
-				<h1><span class="decor-1"></span>Somos especializados em comércio eletrônico, desenvolvimento mobile e cloud computing<span class="decor-2"></span></h2>
+			<div class="hero-content">
+				<h1><span class="decor-1"></span>Somos especializados em comércio eletrônico, <br>desenvolvimento mobile e cloud computing<span class="decor-2"></span></h2>
 			</div>
 		</div>
 	</section>
