Correção do texto da página carreiras

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -180,7 +180,7 @@ title: Carreira
 				<h2 class="secondary-title"><span class="purple">//</span> Fix<h2>
 				<div class="col-md-4">
 					<div class="jumbotron">
-				        <h2>PDBA/AD</h2>
+				        <h2>DBA/AD</h2>
 				        <h4>O que esperamos do candidato:</h4>
 			        	<ul>			   
 							<p>Habilidades Fundamentais:</p>
