--- a/o-que-fazemos/index.html
+++ b/o-que-fazemos/index.html
@@ -49,7 +49,7 @@ title: O que fazemos
 		<section id="mobile-service" class="box box-color">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Mobile</h2>
-				<img src="/img/mobile.png" alt="Mobile" class="/img-responsive img-service">
+				<img src="/img/mobile.png" alt="Mobile" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service border-right col-md-3">
 						<div class="row center"><img src="/img/multicanal.png"></div>
@@ -77,7 +77,7 @@ title: O que fazemos
 		<section id="cloud-service" class="box">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Cloud</h2>
-				<img src="/img/bg-cloud.jpg" alt="Cloud" class="/img-responsive img-service">
+				<img src="/img/bg-cloud.jpg" alt="Cloud" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/aws.png"></div>
@@ -105,7 +105,7 @@ title: O que fazemos
 		<section id="middleware-service" class="box box-color">
 			<div class="container">
 				<h2 class="title-service"><span class="purple">//</span> Middleware</h2>
-				<img src="/img/middleware.png" alt="Middleware" class="/img-responsive img-service">
+				<img src="/img/middleware.png" alt="Middleware" class="img-responsive img-service">
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/integracao.png"></div>						
