correção de texto da página carreira

--- a/carreira/index.html
+++ b/carreira/index.html
@@ -192,7 +192,7 @@ title: Carreira
 							<li>Modelagem de dados</li>
 							<li>Tuning de query</li>
 							<li>Programação em banco de dados (scripts de carga, procedures)</li>
-							<li>CArquiteturas com High Availability</li>
+							<li>Arquiteturas de Alta Disponibilidade</li>
 							<li>Inglês fluente</li>
 						</ul>
 			        	<ul>			   
@@ -200,7 +200,7 @@ title: Carreira
 							<li>Big Data</li>
 							<li>Banco de Dados na nuvem</li>
 							<li>No-SQLs</li>
-							<li>Conhecimentos em Web Semântic</li>
+							<li>Conhecimentos em Web Semântica</li>
 							<li>Sparql</li>
 							<li>Python/Django,Ruby/Rails, Javascript</li>
 						</ul>
