--- a/carreira/index.html
+++ b/carreira/index.html
@@ -160,7 +160,7 @@ title: Carreira
 						<h5>Favor enviar currículo atualizado.</h5>
 						<h4>O que oferecemos:</h4>
 						<ul>
-							<li> Ajuda de custo para pessoas que não sejam da cidade de São Paulo e que queiram vir trabalhar conosco.</li>
+							<li> Ajuda de custo para pessoas que não sejam da cidade do Rio de Janeiro e que queiram vir trabalhar conosco.</li>
 							<li> Oportunidade de trabalhar em um time de pessoas dedicadas e que amam o que fazem.</li>
 							<li> Projetos 100% desenvolvidos utilizando metodologias ágeis.</li>
 							<li> Valorização das pessoas e não de processos.</li>
