atualização do news

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ is_index: true
 			<div class="row">
 			    <div class="col-md-6">
 			    	<header>
-						<h2 class="title-news">O que todo empreendedor digital deve ler</h2>
-						<h6 class="author-news">Por: Fernando de La Riva 25/04/14</h6>
+						<h2 class="title-news">Aprenda a fazer a sua loja mobile para tablet ou celular</h2>
+						<h6 class="author-news">Por: Isabella Sánchez</h6>
 					</header>
-					<p>Para ter sucesso em negócios digitais, você tem que entender que está entrando em uma longa trajetória (eu já estou nela há quase vinte anos) de aprendizado empírico. Este aprendizado pode ser organizado em quatro áreas: os evangelistas, os executores, os investidores e os praticantes.</p>
-					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank" class="btn-master">ler mais</a>
+					<p> Tudo o que você precisa saber para entrar no comércio eletrônico que mais cresce no Brasil e no mundo. Veja a opinião de Victor Lima, gerente da nossa área mobile, na Revista W deste mês.</p>
+					<a href="ecomerce.pdf" target="_blank" class="btn-master">ler mais</a>
 				</div>
 				<div class="col-md-6">
-					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank"><img alt="News" class="align-right" src="img/img-post1.jpg"></a>
+					<a href="http://exame.abril.com.br/pme/noticias/o-que-todo-empreendedor-digital-deve-ler" target="_blank"><img alt="News" class="align-right" src="img/img-ecomerce.jpg"></a>
 			    </div>
 			</div>
 		</div>
